Add Proposal annotations, type fixes and improvements.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -625,7 +625,8 @@ a:hover {
 
 			&--bluegray { background: #455A64; }
 			&--orange { background: #F57C00; }
-			&--purple { background: #4A148C; }
+			&--purple { background: #6A1B9A; }
+			&--pink { background: #AD1457; }
 		}
 	}
 
