Annotation filter bugfix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1304,7 +1304,7 @@ a:hover {
  * Filters
  */
 .annot-deprecated { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
-.annot-notImplemente { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
+.annot-notImplemented { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
 .annot-experimental { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
 .annot-breakingChange { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
 .annot-proposal { .record__content { display: none; } .record__header__title { opacity: 0.5; filter: saturate(0); } .record__header .section__sidecode { color: #6c727b; } .nav-tree__item__label { opacity: 0.5; filter: saturate(0); } }
